Use vscode and gdb to debug. Update README.md. Update main.cpp(Use std::map to optimize). Delete ConfigGenerator.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "aiXcoder.symbol": "★",
     "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
     "files.associations": {
-        "xstring": "cpp"
+        "xstring": "cpp",
+        "iostream": "cpp"
     }
 }
